fixed map styles UI issues along with closing issue on ios and updated a text

--- a/src/atomicui/organisms/AuthTrackerBox/styles.scss
+++ b/src/atomicui/organisms/AuthTrackerBox/styles.scss
@@ -61,6 +61,12 @@
 				top: -25px;
 				border: 0;
 				z-index: 26;
+
+				svg {
+					position: absolute;
+					right: 0;
+					top: -10px;
+				}
 			}
 		}
 	}
