--- a/src/atomicui/organisms/ResponsiveBottomSheet/styles.scss
+++ b/src/atomicui/organisms/ResponsiveBottomSheet/styles.scss
@@ -29,7 +29,7 @@
 		padding: 0;
 		z-index: 20;
 		opacity: 1;
-		min-height: 1.7rem;
+		min-height: 0.5rem;
 	}
 
 	&.bottom-sheet--collapsed {
@@ -38,9 +38,15 @@
 		}
 	}
 
-	// [data-rsbs-scroll="true"] {
-	// 	margin-top: 1.5rem;
-	// }
+	&.margin-top-from-header {
+		// [data-rsbs-scroll="true"] {
+		// 	margin-top: 1.2rem;
+		// }
+
+		[data-rsbs-header="true"] {
+			min-height: 1.7rem;
+		}
+	}
 
 	.logo-mobile-container {
 		position: absolute;
